@@ -45,6 +45,7 @@ jnlp.codebase.url=file:/D:/all/projects/java/synonyms/wikokit/wiwordik/dist/
 jnlp.offline-allowed=true
 jnlp.packEnabled=false
 jnlp.signed=false
+jnlp.update.model=always
 main.class=wiwordik.Main
 pack200.jar.compress=true
 platform.active=default_fx_platform
